--- a/arch/arm64/boot/dts/qcom/dsi-panel-samsung_sofef00_m_cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-samsung_sofef00_m_cmd.dtsi
@@ -225,6 +225,111 @@
 					06 01 00 00 00 00 01 A1
 				];
 				qcom,mdss-dsi-panel-serial-num-command-state = "dsi_lp_mode";
+				qcom,mdss-dsi-panel-srgb-on-command = [
+					39 01 00 00 00 00 03 f0 5A 5A
+					39 01 00 00 00 00 03 E2 00 85
+					39 01 00 00 00 00 02 B0 2C
+					39 01 00 00 00 00 16 E2 B1 07 06 3E CD 14 07 08 B0 4D E6 C9 C1 0B B9 E5 DA 18 FE F6 D7
+					39 01 00 00 00 00 02 b0 49
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4A
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4B
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4C
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4D
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 03 f0 A5 A5
+				];
+				qcom,mdss-dsi-panel-srgb-off-command = [
+					39 01 00 00 00 00 03 F0 5A 5A
+					39 01 00 00 00 00 03 E2 00 40
+					39 01 00 00 00 00 03 F0 A5 A5
+				];
+				qcom,mdss-dsi-srgb-on-command-state = "dsi_lp_mode";
+				qcom,mdss-dsi-srgb-off-command-state = "dsi_lp_mode";
+
+				qcom,mdss-dsi-panel-dci-p3-on-command = [
+					39 01 00 00 00 00 03 f0 5A 5A
+					39 01 00 00 00 00 03 E2 00 85
+					39 01 00 00 00 00 02 B0 2C
+					39 01 00 00 00 00 16 E2 D0 00 00 12 D4 00 0A 08 C3 1D EE CF E8 02 C8 E7 DE 00 FF F6 D7
+					39 01 00 00 00 00 02 b0 49
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4A
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4B
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4C
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4D
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 03 f0 A5 A5
+				];
+				qcom,mdss-dsi-dci-p3-on-command-state = "dsi_lp_mode";
+				qcom,mdss-dsi-dci-p3-off-command-state = "dsi_lp_mode";
+
+				qcom,mdss-dsi-panel-night-mode-on-command = [
+					39 01 00 00 00 00 03 f0 5A 5A
+					39 01 00 00 00 00 03 E2 00 85
+					39 01 00 00 00 00 02 B0 2C
+					39 01 00 00 00 00 16 E2 B1 07 06 3E CD 14 07 08 B0 4D E6 C9 C1 0B B9 E5 DA 18 FE FD F5
+					39 01 00 00 00 00 02 b0 49
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 03 f0 A5 A5
+				];
+				qcom,mdss-dsi-panel-night-mode-off-command = [
+					39 01 00 00 00 00 03 F0 5A 5A
+					39 01 00 00 00 00 03 E2 00 40
+					39 01 00 00 00 00 03 F0 A5 A5
+				];
+				qcom,mdss-dsi-night-mode-on-command-state = "dsi_lp_mode";
+				qcom,mdss-dsi-night-mode-off-command-state = "dsi_lp_mode";
+
+				qcom,mdss-dsi-panel-oneplus-mode-on-command = [
+					39 01 00 00 00 00 03 f0 5A 5A
+					39 01 00 00 00 00 03 E2 00 85
+					39 01 00 00 00 00 02 B0 2C
+					39 01 00 00 00 00 16 E2 b4
+					02 04 05 ff 02 00 00 ff 00
+					ff ff f0 00 f0 e0 e1 18 ff fe fB
+					39 01 00 00 00 00 02 b0 49
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4A
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 02 b0 4B
+					39 01 00 00 00 00 02 E2 01
+					39 01 00 00 00 00 02 b0 4C
+					39 01 00 00 00 00 02 E2 01
+					39 01 00 00 00 00 03 f0 a5 a5
+				];
+				qcom,mdss-dsi-panel-oneplus-mode-off-command = [
+					39 01 00 00 00 00 03 F0 5A 5A
+					39 01 00 00 00 00 03 E2 00 40
+					39 01 00 00 00 00 03 F0 A5 A5
+				];
+				qcom,mdss-dsi-panel-oneplus-mode-on-command-state = "dsi_lp_mode";
+				qcom,mdss-dsi-panel-oneplus-mode-off-command-state = "dsi_lp_mode";
+
+				qcom,mdss-dsi-panel-adaption-mode-on-command = [
+					39 01 00 00 00 00 03 f0 5A 5A
+					39 01 00 00 00 00 03 E2 00 85
+					39 01 00 00 00 00 02 B0 2C
+					39 01 00 00 00 00 16 E2 B4 02 04 05 FF 02 00 00 FF 00 FF FF F0 00 F0 E0 E1 18 FE FD F1
+					39 01 00 00 00 00 02 b0 49
+					39 01 00 00 00 00 02 E2 00
+					39 01 00 00 00 00 03 f0 A5 A5
+				];
+				qcom,mdss-dsi-panel-adaption-mode-off-command = [
+					39 01 00 00 00 00 03 F0 5A 5A
+					39 01 00 00 00 00 03 E2 00 40
+					39 01 00 00 00 00 03 F0 A5 A5
+				];
+				qcom,mdss-dsi-adaption-mode-on-command-state =
+				"dsi_lp_mode";
+				qcom,mdss-dsi-adaption-mode-off-command-state =
+				"dsi_lp_mode";
 				qcom,mdss-dsi-panel-display-srgb-color-mode-on-command = [
 				39 01 00 00 00 00 03 f0 5A 5A
 				39 01 00 00 00 00 03 E2 00 85
